fix an issue with the light box on narrow screens where it would overflow the bottom of the page

--- a/sass/css/gallery.scss
+++ b/sass/css/gallery.scss
@@ -33,12 +33,14 @@
         p {
             width: 100%;
             text-align: center;
+            margin: 0;
 
             padding: 10px;
 
             background: rgba(0,0,0,0.8);
 
             font-palette: --dark-mode;
+            color: white;
         }
         
         .next, .prev {
@@ -61,6 +63,10 @@
 
         .close {
             flex-grow: 1;
+            flex-shrink: 1;
+
+            min-height: 10%;
+
             height: 100%;
             align-content: center;
         }
